fixed display of images in Profile + scrollbar

--- a/src/components/UI/Navbar.module.css
+++ b/src/components/UI/Navbar.module.css
@@ -13,6 +13,7 @@
   text-shadow: 4px -2px 4px var(--rosy);
   top: 0;
   z-index: 1000;
+  box-sizing: border-box;
 }
 
 .navbar a {
